[gd_scene load_steps=72 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Main.gd" type="Script" id=2]
[ext_resource path="res://scenes/Mob.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=6]
[ext_resource path="res://dodge_assets/music/Cyberpunk Moonlight Sonata v2.ogg" type="AudioStream" id=7]
[ext_resource path="res://dodge_assets/music/TremLoadingloopl.ogg" type="AudioStream" id=8]
[ext_resource path="res://scenes/Config.tscn" type="PackedScene" id=9]
[ext_resource path="res://dodge_assets/art/burst/burst0003.png" type="Texture" id=10]
[ext_resource path="res://dodge_assets/art/burst/burst0002.png" type="Texture" id=11]
[ext_resource path="res://dodge_assets/art/burst/burst0014.png" type="Texture" id=12]
[ext_resource path="res://dodge_assets/art/burst/burst0008.png" type="Texture" id=13]
[ext_resource path="res://dodge_assets/art/burst/burst0040.png" type="Texture" id=14]
[ext_resource path="res://dodge_assets/art/burst/burst0034.png" type="Texture" id=15]
[ext_resource path="res://dodge_assets/art/burst/burst0025.png" type="Texture" id=16]
[ext_resource path="res://dodge_assets/art/burst/burst0019.png" type="Texture" id=17]
[ext_resource path="res://dodge_assets/art/burst/burst0016.png" type="Texture" id=18]
[ext_resource path="res://dodge_assets/art/burst/burst0058.png" type="Texture" id=19]
[ext_resource path="res://dodge_assets/art/burst/burst0015.png" type="Texture" id=20]
[ext_resource path="res://dodge_assets/art/burst/burst0024.png" type="Texture" id=21]
[ext_resource path="res://dodge_assets/art/burst/burst0009.png" type="Texture" id=22]
[ext_resource path="res://dodge_assets/art/burst/burst0018.png" type="Texture" id=23]
[ext_resource path="res://dodge_assets/art/burst/burst0021.png" type="Texture" id=24]
[ext_resource path="res://dodge_assets/art/burst/burst0045.png" type="Texture" id=25]
[ext_resource path="res://dodge_assets/art/burst/burst0026.png" type="Texture" id=26]
[ext_resource path="res://dodge_assets/art/burst/burst0031.png" type="Texture" id=27]
[ext_resource path="res://dodge_assets/art/burst/burst0004.png" type="Texture" id=28]
[ext_resource path="res://dodge_assets/art/burst/burst0042.png" type="Texture" id=29]
[ext_resource path="res://dodge_assets/art/burst/burst0043.png" type="Texture" id=30]
[ext_resource path="res://dodge_assets/art/burst/burst0044.png" type="Texture" id=31]
[ext_resource path="res://dodge_assets/art/burst/burst0050.png" type="Texture" id=32]
[ext_resource path="res://dodge_assets/art/burst/burst0046.png" type="Texture" id=33]
[ext_resource path="res://dodge_assets/art/burst/burst0036.png" type="Texture" id=34]
[ext_resource path="res://dodge_assets/art/burst/burst0041.png" type="Texture" id=35]
[ext_resource path="res://dodge_assets/art/burst/burst0039.png" type="Texture" id=36]
[ext_resource path="res://dodge_assets/art/burst/burst0038.png" type="Texture" id=37]
[ext_resource path="res://dodge_assets/art/burst/burst0055.png" type="Texture" id=38]
[ext_resource path="res://dodge_assets/art/burst/burst0049.png" type="Texture" id=39]
[ext_resource path="res://dodge_assets/art/burst/burst0048.png" type="Texture" id=40]
[ext_resource path="res://dodge_assets/art/burst/burst0033.png" type="Texture" id=41]
[ext_resource path="res://dodge_assets/art/burst/burst0037.png" type="Texture" id=42]
[ext_resource path="res://dodge_assets/art/burst/burst0035.png" type="Texture" id=43]
[ext_resource path="res://dodge_assets/art/burst/burst0010.png" type="Texture" id=44]
[ext_resource path="res://dodge_assets/art/burst/burst0006.png" type="Texture" id=45]
[ext_resource path="res://dodge_assets/art/burst/burst0005.png" type="Texture" id=46]
[ext_resource path="res://dodge_assets/art/burst/burst0020.png" type="Texture" id=47]
[ext_resource path="res://dodge_assets/art/burst/burst0022.png" type="Texture" id=48]
[ext_resource path="res://dodge_assets/art/burst/burst0059.png" type="Texture" id=49]
[ext_resource path="res://dodge_assets/art/burst/burst0012.png" type="Texture" id=50]
[ext_resource path="res://dodge_assets/art/burst/burst0051.png" type="Texture" id=51]
[ext_resource path="res://dodge_assets/art/burst/burst0023.png" type="Texture" id=52]
[ext_resource path="res://dodge_assets/art/burst/burst0030.png" type="Texture" id=53]
[ext_resource path="res://dodge_assets/art/burst/burst0032.png" type="Texture" id=54]
[ext_resource path="res://dodge_assets/art/burst/burst0001.png" type="Texture" id=55]
[ext_resource path="res://dodge_assets/art/burst/burst0053.png" type="Texture" id=56]
[ext_resource path="res://dodge_assets/art/burst/burst0047.png" type="Texture" id=57]
[ext_resource path="res://dodge_assets/art/burst/burst0028.png" type="Texture" id=58]
[ext_resource path="res://dodge_assets/art/burst/burst0017.png" type="Texture" id=59]
[ext_resource path="res://dodge_assets/art/burst/burst0011.png" type="Texture" id=60]
[ext_resource path="res://dodge_assets/art/burst/burst0056.png" type="Texture" id=61]
[ext_resource path="res://dodge_assets/art/burst/burst0057.png" type="Texture" id=62]
[ext_resource path="res://dodge_assets/art/burst/burst0013.png" type="Texture" id=63]
[ext_resource path="res://dodge_assets/art/burst/burst0007.png" type="Texture" id=64]
[ext_resource path="res://dodge_assets/art/burst/burst0060.png" type="Texture" id=65]
[ext_resource path="res://dodge_assets/art/burst/burst0054.png" type="Texture" id=66]
[ext_resource path="res://dodge_assets/art/burst/burst0027.png" type="Texture" id=67]
[ext_resource path="res://dodge_assets/art/burst/burst0052.png" type="Texture" id=68]
[ext_resource path="res://dodge_assets/art/burst/burst0029.png" type="Texture" id=69]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 55 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 28 ), ExtResource( 46 ), ExtResource( 45 ), ExtResource( 64 ), ExtResource( 13 ), ExtResource( 22 ), ExtResource( 60 ), ExtResource( 44 ), ExtResource( 50 ), ExtResource( 63 ), ExtResource( 20 ), ExtResource( 18 ), ExtResource( 59 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 23 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 24 ), ExtResource( 52 ), ExtResource( 21 ), ExtResource( 16 ), ExtResource( 67 ), ExtResource( 26 ), ExtResource( 69 ), ExtResource( 58 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 27 ), ExtResource( 41 ), ExtResource( 43 ), ExtResource( 34 ), ExtResource( 15 ), ExtResource( 42 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 14 ), ExtResource( 35 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 25 ), ExtResource( 33 ), ExtResource( 57 ), ExtResource( 40 ), ExtResource( 39 ), ExtResource( 51 ), ExtResource( 56 ), ExtResource( 68 ), ExtResource( 66 ), ExtResource( 38 ), ExtResource( 62 ), ExtResource( 61 ), ExtResource( 19 ), ExtResource( 49 ), ExtResource( 65 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Main" type="Node"]
script = ExtResource( 2 )
Mob = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 720.0
color = Color( 0.121569, 0.356863, 0.266667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FpsTimer" type="Timer" parent="."]
autostart = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true

[node name="MusicGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -8.0

[node name="MobAppearing" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 55
playing = true

[node name="Config" parent="." instance=ExtResource( 9 )]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="FpsTimer" to="." method="_on_FpsTimer_timeout"]
[connection signal="change_difficulty" from="HUD" to="." method="_on_change_difficulty"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="finished" from="DeathSound" to="." method="_on_DeathSound_finished"]
